Update: • Btn 'update' bug • Btn Changelog design issue • Title Parsec Cloud removed • Overlapped modals • Align text/icon version • Update tests

--- a/client/src/theme/components/buttons.scss
+++ b/client/src/theme/components/buttons.scss
@@ -56,6 +56,7 @@ ion-button:not(.button-outline):not(.button-clear) {
 /* button outline */
 ion-button.button-outline {
   --border-color: var(--parsec-color-light-primary-500);
+  --background: none;
   --color: var(--parsec-color-light-primary-500);
   --border-color-hover: var(--parsec-color-light-primary-700);
   --color-hover: var(--parsec-color-light-primary-700);
